[package]
name = "bridge"
version = "0.1.0"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
sp-keyring = { git = "https://github.com/paritytech/substrate/", package = "sp-keyring" }
substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt", package = "substrate-subxt" }
nickel = "*"
clap = "2.33.0"