[package]
name = "nodle-chain-executor"
version = "2.0.7"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

[dependencies]
parity-scale-codec = "2.0.1"

sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }

nodle-chain-primitives = { path = "../primitives" }
nodle-chain-runtime = { path = "../runtime" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.3" }

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []