[package]
name = "nodle-chain-executor"
version = "2.0.8"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

[dependencies]
parity-scale-codec = "2.0.1"
nodle-chain-primitives = { path = "../primitives" }
nodle-chain-runtime = { path = "../runtime" }
sc-executor = "0.9.0"
sp-core = "3.0.0"
sp-io = "3.0.0"
sp-state-machine = "0.9.0"
sp-trie = "3.0.0"
trie-root = "0.16.0"
frame-benchmarking = "3.1.0"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []