[package]
name = "nodle-chain-executor"
version = "2.0.12"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
trie-root = { version = "0.16.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
nodle-chain-primitives = { path = "../primitives" }
nodle-chain-runtime = { path = "../runtime" }

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []